# Financial-Analyst-Agent

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.qdrant.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
.runtime/: run_store.json
agents/: __init__.py  graph.py  state.py
api/: main.py  run_store.py  schemas.py
app/: config.py  main.py
app/agents/: __init__.py  graph.py  state.py
app/components/retrieval/: embeddings.py  evidence.py  hybrid_retrieve.py  ingestion.py  qdrant_store.py  reranked_hybrid_retrieve.py  section_aware_search.py  section_intent.py  sections.py  vector_store.py
app/observability/: __init__.py  langsmith.py  metrics.py
app/services/: llm.py  run_store.py  sentiment.py
app/services/tools/: sec_filings_tool.py  stock_data_tool.py  web_search_tool.py
configs/: config.py
evaluation/: __init__.py  __main__.py  build_rag_quality_samples.py  compare_retrieval_results.py  grounding.py  judge_models_interface.py  retrieval_eval.py  retrieval_main.py  run_rag_quality_eval.py  run_retrieval_method_matrix.py  run_shared_retrieval_benchmark.py  validate_retrieval_fixture.py
evaluation/dataset/: rag_quality_samples_5.json  rag_quality_samples_smoke.json
evaluation/eval_results/: rag_quality_eval_deepeval_lcanthropic_temp.json  rag_quality_eval_deepeval_lcanthropic_top_p.json  rag_quality_eval_ragas_deepeval_anthropic_all.json  rag_quality_eval_ragas_deepeval_openai_all.json  rag_quality_eval_ragas_lcanthropic_temp.json  rag_quality_eval_ragas_lcanthropic_top_p.json
evaluation/fixtures/: rag_quality_eval_cases_v1.json  retrieval_baseline.json  retrieval_method_matrix_full.json  retrieval_section_descrimination_section_aware.json  retrieval_section_discrimination_naive.json  retrieval_shared_benchmark_v1.json  retrieval_shared_benchmark_v2_candidate.json
evaluation/reports/: retrieval_eval_20260324T173317Z.json  retrieval_eval_20260324T181834Z.json  retrieval_eval_20260324T183016Z.json  retrieval_eval_20260324T200628Z.json  retrieval_eval_20260324T211608Z.json  retrieval_eval_20260324T212655Z.json  retrieval_eval_20260324T213525Z.json  retrieval_eval_20260324T213536Z.json  retrieval_eval_20260504T044648Z.json  retrieval_eval_20260504T045420Z.json  retrieval_eval_20260504T045459Z.json
evaluation/results/: section_aware_section_discrimination.json
evaluation/results/method_matrix_full/: _summary.json  retrieval_method_matrix_full_default_hybrid.json  retrieval_method_matrix_full_default_naive.json  retrieval_method_matrix_full_default_reranked_hybrid.json  retrieval_method_matrix_full_default_section_aware.json  retrieval_method_matrix_full_default_semantic.json
evaluation/results/old_results/: chroma_naive_ranking.json  chroma_relevance.json  chroma_relevance_2.json  chroma_section_aware_rankings.json  naive_section_discrimination.json  qdrant_langchain_hybrid.json  qdrant_langchain_hybrid_2.json  qdrant_langchain_hybrid_3.json  qdrant_langchain_hybrid_4.json  qdrant_langchain_hybrid_5.json  qdrant_langchain_hybrid_6.json  qdrant_naive_ranking.json  qdrant_relevance.json  qdrant_relevance_2.json  qdrant_reranked_hybrid.json  qdrant_reranked_hybrid_shared.json  qdrant_section_aware_2.json  qdrant_section_aware_3.json  qdrant_section_aware_4.json  qdrant_section_aware_5.json  qdrant_section_aware_6.json  qdrant_section_aware_7.json  qdrant_section_aware_rankings.json  qdrant_section_aware_shared.json
models/: __init__.py  llm.py  sentiment.py
monitoring/grafana/: prometheus.yml
monitoring/grafana/dashboards/: financial-analyst.json
monitoring/grafana/provisioning/dashboards/: dashboards.yml
observability/: __init__.py  langsmith.py  metrics.py
rag/: __init__.py  embeddings.py  evidence.py  hybrid_retrieve.py  hybrid_search.py  ingestion.py  qdrant_store.py  reranked_hybrid_retrieve.py  section_aware_search.py  section_intent.py  sections.py  sparse_retriever.py  vector_store.py
scripts/: smoke_test_live_pipeline.py
tests/: __init__.py  conftest.py  pytest.ini  test_api_integration.py  test_eval_suite.py  test_retrieval_eval.py  test_run_store.py
tests/eval/: test_evaluation.py
tests/integration/: test_integration.py  test_web_search_integrate.py  test_workflow_verification.py
tests/unit/: test_api_cors.py  test_api_schema_defaults.py  test_citations.py  test_compare_retrieval_results_paired.py  test_config.py  test_embeddings_client.py  test_evidence.py  test_graph_routing.py  test_graph_verification_integration.py  test_grounding_eval.py  test_hybrid_search.py  test_ingestion.py  test_judge_model_config.py  test_lc_hybrid_search.py  test_llm.py  test_qdrant_store.py  test_rag_quality_eval_retries.py  test_rag_quality_fixture_contract.py  test_reranked_hybrid_retrieve.py  test_retrieval_contract.py  test_retrieval_eval_hybrid_mode.py  test_retrieval_eval_reranked_hybrid_mode.py  test_retrieval_eval_section_aware_mode.py  test_retrieval_shared_fixture_contract.py  test_retrieve_eval_lc_hybrid_mode.py  test_run_store.py  test_section_aware_search.py  test_section_intent.py  test_sections.py  test_sparse_retriever.py  test_state.py  test_state_context.py  test_vector_store.py  test_vector_store_factory.py  test_web_search.py
tools/: sec_filings_tool.py  stock_data_tool.py  web_search_tool.py
