[project]
name = "alpha-analyst"
version = "1.1.0"
description = "AI-powered financial analysis agent"
authors = [{ name = "Nilesh Auradkar", email = "nilesh.auradkar14@gmail.com" }]
requires-python = ">=3.10,<3.14"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "python-dotenv>=1.1",
    "loguru>=0.7,<0.8",
    "pydantic>=2.11",
    "pydantic-settings>=2.10,<3",
    "langchain>=1.2",
    "langchain-community>=0.4",
    "langchain-text-splitters>=1.1",
    "langgraph>=1.0",
    "protobuf<=3.20.3",
    "tokenizers>=0.20",
    "chromadb>=1.1",
    "yfinance>=1.1",
    "httpx>=0.28",
    "tavily-python>=0.7",
    "torch>=2.2",
    "transformers>=4.0",
    "langchain-ollama>=1.0.1",
    "tenacity>=9.1.4",
    "qdrant-client>=1.17.1,<2",
    "langchain-classic>=1.0.5",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=5.4.1",
]

[project.scripts]
alpha-analyst = "app.main:run_api"
evaluate = "evaluation.retrieval_main:main"

[dependency-groups]
api = [
    "fastapi>=0.128",
    "uvicorn[standard]>=0.40",
    "prometheus-client>=0.24",
]
dev = [
    "pytest>=9.0.2,<10",
    "pytest-asyncio>=1.3",
    "pytest-cov>=7.0",
    "ruff>=0.14",
    "mypy>=2",
]
eval = [
    "deepeval>=3.9.9",
    "datasets>=4.5",
    "ragas>=0.4.3",
    "langchain-nvidia-ai-endpoints>=1.3.0",
    "langchain-anthropic>=1.4.3",
    "anthropic>=0.100.0",
    "litellm>=1.83.0",
]


[tool.uv]
default-groups = ["api", "dev", "eval"]

[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "app",
    "evaluation",
]

# --- Tool Configs (Ruff, Pytest, etc.) ---

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
ignore_missing_imports = true
